--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <div class="content-div">
         <img style="aspect-ratio: 1/1; border-radius: 50%;" src="avatar.jpg" alt="NguyenHa" width="130">
-        <div class="text" style="font-size: 18px; font-weight: 600; margin-top: 10px;margin-bottom: 3px;">Nguyễn Hà
+        <div class="text" style="font-size: 18px; font-weight: 600; margin-top: 10px;margin-bottom: 3px;">Gia Quy
         </div>
-        <div class="text" style="font-size: 13px; margin-bottom: 10px;">❤️haxynh0310❤️</div>
+        <div class="text" style="font-size: 13px; margin-bottom: 10px;">❤️V-Site❤️</div>
         <div class="social">
             <div class="social-ig">
                 <a href="https://instagram.com/kerajaanistana">
