--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="warpper" style="margin-bottom: 0px !important;">
-        <div style="font-weight: 600;  font-size: 18px;">Set đồ nữ xinh có voucher giảm giá </div>
+        <div style="font-weight: 600;  font-size: 18px;">Phiếu giảm giá :3</div>
         <div class="tabs" id="voucher-list">
             <!-- <a class="voucher" href="/">
                 <div class="vctag">Số luợng có hạn</div>
