--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="content-div">
-        <img style="aspect-ratio: 1/1; border-radius: 50%;" src="avatar.jpg" alt="memaybeo" width="130">
+        <img style="aspect-ratio: 1/1; border-radius: 50%;" src="avatar1.jpg" alt="memaybeo" width="130">
         <div class="text" style="font-size: 18px; font-weight: 600; margin-top: 10px;margin-bottom: 3px;">Gia Quy
         </div>
         <div class="text" style="font-size: 13px; margin-bottom: 10px;">❤️V-Site❤️</div>
